--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 default_chain: stride-testnet
 chains:
   gaia-testnet:
-    key: cüzdanisminiz
+    key: kratos
     chain-id: GAIA
     rpc-addr: http://127.0.0.1:23657
     grpc-addr: http://127.0.0.1:23090
@@ -16,7 +16,7 @@ chains:
     output-format: json
     sign-mode: direct
   stride-testnet:
-    key: cüzdanisminiz
+    key: kratos
     chain-id: STRIDE-TESTNET-4
     rpc-addr: http://127.0.0.1:16657
     grpc-addr: http://127.0.0.1:16090
